Adding proposal section

--- a/Research Project/_quarto.yml
+++ b/Research Project/_quarto.yml
@@ -8,7 +8,7 @@ book:
   author:
     - "Patrick Connelly"
     - "Aneesh Khole"
-    - "Uttara"
+    - "Uttara Ketkar"
   chapters:
     - proposal.qmd
     - index.qmd
