Updated Data Section
Provided plot sample code, targeted plots, and additional requirements to meet before Milestone 2

--- a/Research Project/_quarto.yml
+++ b/Research Project/_quarto.yml
@@ -34,7 +34,7 @@ nocite: |
 format:
   html:
     theme: 
-      - flatly
+      - cosmo #flatly
       - custom.scss
     page-layout: full
     smooth-scroll: true
